<resources>
    <integer name="com_vk_sdk_AppId">5537653</integer>

    <string name="app_name">DevIntensiveApp</string>

    <!-- Contacts page info -->
    <string name="header_rating">Рейтинг</string>
    <string name="header_code_strings">Написано строк кода</string>
    <string name="header_projects">Проектов</string>

    <string name="contacts_mobile">Мобильный</string>
    <string name="contacts_email">E-mail</string>
    <string name="contacts_vk">Профиль в VK</string>
    <string name="contacts_repo">Репозиторий</string>
    <string name="contacts_about">О себе</string>


    <!-- Temporary volumes of contacts page info -->
    <string name="header_rating_vol">5</string>
    <string name="header_code_strings_vol">25000</string>
    <string name="header_projects_vol">5</string>

    <string name="contacts_mobile_vol">+7 917 971-11-11</string>
    <string name="contacts_email_vol">makveb@yandex.ru</string>
    <string name="contacts_vk_vol">vk.com/makeeb_mihail</string>
    <string name="contacts_repo_vol">github.com/YuliaRada/School</string>
    <string name="contacts_about_vol">Lorem ipsum dolor sit amet, consectitur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo
        lectus, ac blandit elit
    </string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.chose.message">Выберите фото</string>
    <string name="menu_my_profile">Мой профиль</string>
    <string name="menu_team">Команда</string>
    <string name="menu_login">Вход через DevIntensive</string>
    <string name="drawer_header_user_name">Прибытков Андрей</string>
    <string name="drawer_header_user_email">myMail@mail.ru</string>
    <string name="auth_enter_txt">ВОЙТИ</string>
    <string name="auth_email_txt">Введите e-mail</string>
    <string name="auth_pass_txt">Введите пароль</string>
    <string name="auth_pass_forget_txt">Забыли пароль?</string>
    <string name="error_correct_profile">Исправьте ошибки в профиле</string>
    <string name="error_permission_need">Для корректной работы необходимо дать требуемые разрешения</string>
    <string name="approve">Разрешить</string>
    <string name="menu_login_vk">Вход через VK</string>
    <string name="more_info_btn">Просмотр</string>
    <string name="search_title">Поиск</string>

</resources>
