<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/grey"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <ImageView
                        android:id="@+id/user_photo_img"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/profile_image_size"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_bg"
                        android:fitsSystemWindows="true"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:theme="@style/ToolBarStyle"
                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/spacing_medium_32"
            android:paddingTop="@dimen/spacing_medium_32"
            app:layout_behavior="com.softdesign.devintensive.ui.behaviors.HeaderBehavior">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_info_rait_txt"
                    style="@style/header_text.large"
                    android:text="@string/header_rating_vol"/>

                <TextView
                    style="@style/header_text"
                    android:text="@string/header_rating"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size"
                android:layout_height="match_parent"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_info_code_lines_txt"
                    style="@style/header_text.large"
                    android:text="@string/header_code_strings_vol"/>

                <TextView
                    style="@style/header_text"
                    android:text="@string/header_code_strings"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size"
                android:layout_height="match_parent"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_info_projects_txt"
                    style="@style/header_text.large"
                    android:text="@string/header_projects_vol"/>

                <TextView
                    style="@style/header_text"
                    android:text="@string/header_projects"/>

            </LinearLayout>

        </LinearLayout>

    <include layout="@layout/static_profile_content"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fab_right_space"
        android:src="@drawable/ic_heart_24"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|right"/>

</android.support.design.widget.CoordinatorLayout>
